Updating the semantic structure
Adding and adjusting

--- a/index.html
+++ b/index.html
@@ -13,68 +13,92 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Markets</a></li>
-                <li><a href="#">Markets map</a></li>
+                <li><a href="#">Market</a></li>
                 <li><a href="#">Events</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <article>
-            <h2>Markets</h2>
-            <p>The Christmas market in Aalborg</p>
-            <button class="butto-shops"><a href="#">Shops</a></button>
-            <button class="butto-shops"><a href="#">Fun Fair</a></button>
-        </article>
+        <section>
+            <img src="#" alt="Aalborg Logo">
+            <h1>Here's everything your Christmas heart desires.</h1>
+        </section>
+        <section>
+            <article>
+                <h2>Market</h2>
+                <p>The Christmas market in Aalborg oozes and smells like Christmas.
+                     With mulled wine, burnt almonds and warm fritters, as well as a 
+                    multitude of other Christmas treats. You will find all this in
+                     the small cosy Christmas cabins on both Gammeltorv and Nytorv.</p>
+                <button class="butto-shops"><a href="#">Shops</a></button>
+                <button class="butto-shops"><a href="#">Fun Fair</a></button>
+            </article>
         
-        <aside>
-            <h3>Opening Hours</h3>
-            <table>
-            <tr>
-                <th>Monday to Thursday</th>
-                <td>12:00 - 17:30</td>
-            </tr>
-            <tr>
-                <th>Friday</th>
-                <td>12:00 - 17:30</td>
-            </tr>
-            <tr>
-                <th>Saturday</th>
-                <td>10:00 - 18:00</td>
-            </tr>
-            <tr>
-                <th>Sunday</th>
-                <td>10:00 - 16:00</td>
-            </tr>
-        </table>
-        </aside>
+            <aside>
+                <h3>Opening Hours</h3>
+                <table>
+                    <tr>
+                        <th>Monday to Thursday</th>
+                        <td>12:00 - 17:30</td>
+                    </tr>
+                    <tr>
+                        <th>Friday</th>
+                        <td>12:00 - 17:30</td>
+                    </tr>
+                    <tr>
+                        <th>Saturday</th>
+                        <td>10:00 - 18:00</td>
+                    </tr>
+                    <tr>
+                        <th>Sunday</th>
+                        <td>10:00 - 16:00</td>
+                    </tr>
+                </table>
+            </aside>
+        </section>
+
         <section class="events">
-            <div class="gallery">
-                <a href="#" target="_blank">
-                    <img src="#" alt="image" class="images"></a>
-                <div class="desc">Description </div>
-            </div>
-            <div class="gallery">
-                <a href="#" target="_blank">
-                    <img src="#" alt="image" class="images"></a>
-                <div class="desc">Description </div>
-            </div>
-            <article class="gallery">
-                <a href="#"></a>
-                <img src="#" alt="image">
-                <p>Description</p>
+            <article>
+                <img src="#" alt="Santa">
+                <h3>Arrival of Santa Claus</h3>
+                <p>20.11.2021.</p>
+                <time>18:00</time>
+                <p>Honnorkajen</p>
+            </article>
+        
+            <article>
+                <img src="#" alt="Lightening">
+                <h3>Christmas tree Lightening</h3>
+                <p>20.11.2021.</p>
+                <time>20:00</time>
+                <p>Nytorv</p>
             </article>
 
+            <article>
+                <img src="#" alt="Black Friday">
+                <h3>Black Friday</h3>
+                <p>26.11.2021.</p>
+                <time>12:00-22:00</time>
+                <p>Gommeltorv and Nytorv</p>
+            </article>
         </section>
-        <section class="map">
-            <h5>Oversight</h5>
-            <img src="#" alt="#">
-        </section>
-
     </main>
 
-    <footer>&copy; Group 4 - Kocisova S., Maximova M., Hollos T. </footer>
+    <footer>
+        <section>
+            <img src="#" alt="Logo">
+            <a href="#">Facebook</a>
+        </section>
+        <section>
+            <img src="#" alt="Logo">
+            <a href="#">Instagram</a>
+        </section>
+        <section>
+            <img src="#" alt="Logo">
+            <a href="#">event@aalborgcity.dk</a>
+        </section>
+    </footer>
 
 </body>
 
