Made the shop site, added something in index and added assets folder

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Christmas market</title>
+    <meta name="description" content="Main page of the microsite about Christmas market in Aalborg City."/>
 </head>
 
 <body>
@@ -31,7 +32,7 @@
                      With mulled wine, burnt almonds and warm fritters, as well as a 
                     multitude of other Christmas treats. You will find all this in
                      the small cosy Christmas cabins on both Gammeltorv and Nytorv.</p>
-                <button class="butto-shops"><a href="#">Shops</a></button>
+                <button class="butto-shops"><a href="shops.html">Shops</a></button>
                 <button class="butto-shops"><a href="#">Fun Fair</a></button>
             </article>
         
