Created funfair page

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Market</a></li>
-                <li><a href="#">Events</a></li>
+                <li><a href="index.html">Market</a></li>
+                <li><a href="index.html">Events</a></li>
             </ul>
         </nav>
     </header>
@@ -32,8 +32,8 @@
                      With mulled wine, burnt almonds and warm fritters, as well as a 
                     multitude of other Christmas treats. You will find all this in
                      the small cosy Christmas cabins on both Gammeltorv and Nytorv.</p>
-                <button class="butto-shops"><a href="shops.html">Shops</a></button>
-                <button class="butto-shops"><a href="#">Fun Fair</a></button>
+                <button class="button"><a href="shops.html">Shops</a></button>
+                <button class="button"><a href="funfair.html">Fun Fair</a></button>
             </article>
         
             <aside>
@@ -89,11 +89,11 @@
     <footer>
         <section>
             <img src="#" alt="Logo">
-            <a href="#">Facebook</a>
+            <a href="https://www.facebook.com/aalborgcity/">Facebook</a>
         </section>
         <section>
             <img src="#" alt="Logo">
-            <a href="#">Instagram</a>
+            <a href="https://www.instagram.com/aalborgcity/">Instagram</a>
         </section>
         <section>
             <img src="#" alt="Logo">
