--- a/shops.html
+++ b/shops.html
@@ -14,8 +14,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Market</a></li>
-                <li><a href="#">Events</a></li>
+                <li><a href="index.html">Market</a></li>
+                <li><a href="index.html">Events</a></li>
             </ul>
         </nav>
     </header>
@@ -68,11 +68,11 @@
     <footer>
         <section>
             <img src="#" alt="Logo">
-            <a href="#">Facebook</a>
+            <a href="https://www.facebook.com/aalborgcity/">Facebook</a>
         </section>
         <section>
             <img src="#" alt="Logo">
-            <a href="#">Instagram</a>
+            <a href="https://www.instagram.com/aalborgcity/">Instagram</a>
         </section>
         <section>
             <img src="#" alt="Logo">
