Adding the index page css

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <meta name="description" content="Main page of the microsite about Christmas market in Aalborg City."/>
 </head>
 
-<body>
+<body class="index-container">
     <header>
+        <img src="#" alt="Aalborg Logo">
         <nav>
             <ul>
                 <li><a href="index.html">Market</a></li>
@@ -20,12 +21,13 @@
         </nav>
     </header>
 
-    <main>
-        <section>
-            <img src="#" alt="Aalborg Logo">
+    <main class="index-main">
+
+        <section class="hero">
             <h1>Here's everything your Christmas heart desires.</h1>
         </section>
-        <section>
+
+        <section class="market">
             <article>
                 <h2>Market</h2>
                 <p>The Christmas market in Aalborg oozes and smells like Christmas.
@@ -37,7 +39,7 @@
             </article>
         
             <aside>
-                <h3>Opening Hours</h3>
+                <h2>Opening Hours</h2>
                 <table>
                     <tr>
                         <th>Monday to Thursday</th>
@@ -59,9 +61,9 @@
             </aside>
         </section>
 
-        <section class="events">
+        <section class="event">
             <article>
-                <img src="#" alt="Santa">
+                <img src="assets/images/santa.jpg" alt="Santa">
                 <h3>Arrival of Santa Claus</h3>
                 <p>20.11.2021.</p>
                 <time>18:00</time>
@@ -69,7 +71,7 @@
             </article>
         
             <article>
-                <img src="#" alt="Lightening">
+                <img src="assets/images/santa.jpg" alt="Lightening">
                 <h3>Christmas tree Lightening</h3>
                 <p>20.11.2021.</p>
                 <time>20:00</time>
@@ -77,7 +79,7 @@
             </article>
 
             <article>
-                <img src="#" alt="Black Friday">
+                <img src="assets/images/santa.jpg" alt="Black Friday">
                 <h3>Black Friday</h3>
                 <p>26.11.2021.</p>
                 <time>12:00-22:00</time>
