New CSS for index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main class="index-main">
 
         <section class="hero">
-            <h1>Here's everything your Christmas heart desires.</h1>
+            <h1>Here's everything your Christmas heart desires</h1>
         </section>
 
         <section class="market">
@@ -62,7 +62,7 @@
         </section>
 
         <section class="event">
-            <article>
+            <article class="santa">
                 <img src="assets/images/santa.jpg" alt="Santa">
                 <h3>Arrival of Santa Claus</h3>
                 <p>20.11.2021.</p>
@@ -70,16 +70,16 @@
                 <p>Honnorkajen</p>
             </article>
         
-            <article>
-                <img src="assets/images/santa.jpg" alt="Lightening">
+            <article class="tree">
+                <img src="assets/images/xmastree.jpg" alt="Lightening">
                 <h3>Christmas tree Lightening</h3>
                 <p>20.11.2021.</p>
                 <time>20:00</time>
                 <p>Nytorv</p>
             </article>
 
-            <article>
-                <img src="assets/images/santa.jpg" alt="Black Friday">
+            <article class="black">
+                <img src="assets/images/blackfriday.jpg" alt="Black Friday">
                 <h3>Black Friday</h3>
                 <p>26.11.2021.</p>
                 <time>12:00-22:00</time>
