--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta name="description" content="Main page of the microsite about Christmas market in Aalborg City."/>
 </head>
 
-<body class="index-container">
+<body> 
+<div class="index-container"> 
     <header>
         <img src="#" alt="Aalborg Logo">
         <nav>
@@ -62,7 +63,7 @@
         </section>
 
         <section class="event">
-            <article class="santa">
+            <article>
                 <img src="assets/images/santa.jpg" alt="Santa">
                 <h3>Arrival of Santa Claus</h3>
                 <p>20.11.2021.</p>
@@ -70,15 +71,15 @@
                 <p>Honnorkajen</p>
             </article>
         
-            <article class="tree">
-                <img src="assets/images/xmastree.jpg" alt="Lightening">
+            <article>
+                <img src="assets/images/tree.jpg" alt="Lightening">
                 <h3>Christmas tree Lightening</h3>
                 <p>20.11.2021.</p>
                 <p>20:00</p>
                 <p>Nytorv</p>
             </article>
 
-            <article class="black">
+            <article>
                 <img src="assets/images/blackfriday.jpg" alt="Black Friday">
                 <h3>Black Friday</h3>
                 <p>26.11.2021.</p>
@@ -102,7 +103,7 @@
             <a href="#">event@aalborgcity.dk</a>
         </section>
     </footer>
-
+</div>
 </body>
 
 </html>
