i added the css but got nowhere

--- a/shops.html
+++ b/shops.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Christmas market - Shops</title>
     <meta name="description" content="Shop page of the microsite about Christmas market in Aalborg City."/>
 </head>
@@ -20,16 +20,16 @@
         </nav>
     </header>
 
-    <main>
+    <main class="shops-main">
         <section>
             <img src="#" alt="Aalborg Logo">
         </section>
             <h2>Shops</h2>
 
-        <section>
-            <article>
+        <section class="shops">
+            <article class="fandd">
                 <h3>Food & Drinks</h3>
-                <ul>
+                <ul class="shop">
                     <li>Ma Petite France ->
                         <p>Den franske vinbar Ma Petite France kan du finde på Nytorv – det er første gang de er med på Julemarkedet. De sælger rød og hvid vin chaud – franskmændenes gløgg – hertil får man selvfølgelig en småkage. Derudover sælger de også unika håndlavet julepynt fra Miss Green Design. Ma Petite France har en fransk vinbar i Nørregade 6, 9000 Aalborg.</p>
                     </li>
@@ -84,9 +84,9 @@
                 </ul>
             </article>
 
-            <article>
+            <article class="candc">
                 <h3>Clothes & Crafts</h3>
-                <ul>
+                <ul class="shop">
                     <li>Jule-Sweaters ApS
                     <p>Jule-Sweaters ApS er en af Europas største julesweaterbrands. Firmaet er startet og drevet af to nordjyder.
                         Virksomheden er på 5 år gået fra at producere 1.000 sweatre til at i 2021 producere mere end 300.000 julesweatre.
@@ -105,9 +105,9 @@
                 </ul>
             </article>
             
-            <article>
+            <article class="others">
                 <h3>Others</h3>
-                <ul>
+                <ul class="shop">
                     <li>Studenterbiksens Juletræssalg
                         <p>Studenterbiksens Juletræssalg finder du på Gammeltorv. De sælger forskellige juletræer. Blandt andet pottetræer, små pyntetræer og afskårne træer. Derudover kan du også købe adventskranse og andre juledekorationer.</p>
                     </li>
@@ -125,7 +125,7 @@
             </article>
         </section>
 
-        <section>
+        <section class="imagemarket">
             <h2>Market map</h2>
             <img src="assets/images/marketmap.jpg" alt="Market Map">
         </section>
