added funfair css

--- a/funfair.html
+++ b/funfair.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/funfair.css">
     <title>Christmas market</title>
     <meta name="description" content="Fun fair page of the microsite about Christmas market in Aalborg City."/>
 </head>
 
 <body>
+    <div class="funfair-container"> 
     <header>
         <nav>
+            <img src="#" alt="Aalborg Logo">
             <ul>
                 <li><a href="index.html">Market</a></li>
                 <li><a href="index.html">Events</a></li>
@@ -21,17 +23,13 @@
     </header>
 
     <main>
-        <section>
-            <img src="#" alt="Aalborg Logo">
-        </section>
-        <section>
-        <h2>Fun fair at the Christmas market</h2>
-        <p></p>
+        <section class="hero">
+            <h1>Fun fair</h1>
         </section>
 
-        <section class="events">
+        <section class="event">
             <article>
-                <img src="#" alt="Ferris Wheel">
+                <img src="assets/images/ferriswheel.jpg" alt="Ferris Wheel">
                 <h3>Ferris Wheel</h3>
                 <time>12:00-20:00</time>
                 <p>Gammeltorv</p>
@@ -41,7 +39,7 @@
             </article>
         
             <article>
-                <img src="#" alt="Christams train">
+                <img src="assets/images/train.JPG" alt="Christams train">
                 <h3>Christmas train</h3>
                 <time>12:00-20:00</time>
                 <p>Gammeltorv</p>
@@ -51,11 +49,20 @@
             </article>
 
             <article>
-                <img src="#" alt="Elves">
+                <img src="assets/images/elves.jpg" alt="Elves">
                 <h3>Entertaining Elves</h3>
                 <p>Every Friday, Saturday, Sunday</p>
                 <time>16:00</time>
                 <p>Nytorv</p>
+            </article>
+
+            <article>
+                <img src="assets/images/iceskating.jpg" alt="Ice skating">
+                <h3>Ice skating ring</h3>
+                <time>15:00-20:00</time>
+                <p>C. W. Obels Plads</p>
+                <p>Price:<br>
+                   Skates loan for students: FREE </p>
             </article>
         </section>
     </main>
@@ -74,7 +81,7 @@
             <a href="#">event@aalborgcity.dk</a>
         </section>
     </footer>
-
+    </div>
 </body>
 
 </html>
