--- a/index.html
+++ b/index.html
@@ -13,10 +13,19 @@
 <body> 
 <div class="index-container"> 
     <header>
-        <img src="#" alt="Aalborg Logo">
+        <figure>
+            <a href="index.html">
+                <img src="#" alt="Logo">
+            </a>
+        </figure>
         <nav>
             <ul>
-                <li><a href="index.html">Market</a></li>
+                <li><a href="index.html">Market</a>
+                    <ul class="market-menu">
+                        <li><a href="shops.html">Shops</a></li>
+                        <li><a href="funfair.html">Funfair</a></li>
+                    </ul>
+                </li>
                 <li><a href="index.html">Events</a></li>
             </ul>
         </nav>
