--- a/shops.html
+++ b/shops.html
@@ -12,9 +12,19 @@
 
 <body>
     <header>
+        <figure>
+            <a href="index.html">
+                <img src="#" alt="Logo">
+            </a>
+        </figure>
         <nav>
             <ul>
-                <li><a href="index.html">Market</a></li>
+                <li><a href="index.html">Market</a>
+                    <ul class="market-menu">
+                        <li><a href="shops.html">Shops</a></li>
+                        <li><a href="funfair.html">Funfair</a></li>
+                    </ul>
+                </li>
                 <li><a href="index.html">Events</a></li>
             </ul>
         </nav>
