--- a/shops.html
+++ b/shops.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div class="shops-container">
     <header>
         <figure>
             <a href="index.html">
@@ -155,6 +156,7 @@
             <a href="#">event@aalborgcity.dk</a>
         </section>
     </footer>
+</div>
 </body>
 
 </html>
