--- a/shops.html
+++ b/shops.html
@@ -32,10 +32,10 @@
         </header>
 
     <main class="shops-main">
-        <section>
-            <img src="#" alt="Aalborg Logo">
+        <section class="hero">
+            <h1>Shops</h1>
         </section>
-            <h2>Shops</h2>
+           
 
         <section class="shops">
             <article class="fandd">
