--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         
         <nav>
             <ul>
-                <li><a href="index.html">Market</a>
+                <li><a href="#market-nav">Market</a>
                     <ul class="market-menu">
                         <li><a href="shops.html">Shops</a></li>
                         <li><a href="funfair.html">Funfair</a></li>
                     </ul>
                 </li>
-                <li><a href="index.html">Events</a></li>
+                <li><a href="#event-nav">Events</a></li>
             </ul>
         </nav>
     </header>
@@ -38,7 +38,7 @@
             <h1>Here's everything your Christmas heart desires</h1>
         </section>
 
-        <section class="market">
+        <section class="market" id="market-nav">
             <article>
                 <h2>Market</h2>
                 <p>The Christmas market in Aalborg oozes and smells like Christmas.
@@ -72,7 +72,7 @@
             </aside>
         </section>
 
-        <section class="event">
+        <section class="event" id="event-nav">
             <article>
                 <img src="assets/images/santa.jpg" alt="Santa">
                 <h3>Arrival of Santa Claus</h3>
